@@ -9,7 +9,9 @@ import javafx.event.ActionEvent;
 import javafx.fxml.Initializable;
 import javafx.scene.control.ListView;
 import javafx.scene.input.MouseEvent;
+
 import lombok.extern.slf4j.Slf4j;
+
 
 import java.io.File;
 import java.io.IOException;
@@ -33,7 +35,16 @@ public class CloudMainController implements Initializable {
 
     private Socket socket;
 
-    private boolean needReadMessages = true;
+    private static final String SEND_FILE_COMMAND = "file";
+    private static final String GET_FILE_COMMAND = "getfile";
+    private static final String GET_FILELIST_COMMAND = "filelist";
+    private static final Integer BATCH_SIZE = 256;
+    private byte[] batch;
+
+    private String currentDirectory;
+    //  private String currentDirectoryServer;
+
+
 
     private DaemonThreadFactory factory;
 
@@ -44,25 +55,72 @@ public class CloudMainController implements Initializable {
 
     public void sendToServer(ActionEvent actionEvent) throws IOException {
         String fileName = clientView.getSelectionModel().getSelectedItem();
-        network.getOutputStream().writeObject(new FileMessage(Path.of(currentDirectory).resolve(fileName)));
-    }
 
-    private void readMessages() {
-        try {
-            while (needReadMessages) {
-                CloudMessage message = (CloudMessage) network.getInputStream().readObject();
-                if (message instanceof FileMessage fileMessage) {
-                    Files.write(Path.of(currentDirectory).resolve(fileMessage.getFileName()), fileMessage.getBytes());
-                    Platform.runLater(() -> fillView(clientView, getFiles(currentDirectory)));
-                } else if (message instanceof ListMessage listMessage) {
-                    Platform.runLater(() -> fillView(serverView, listMessage.getFiles()));
+        String filePath = currentDirectory + "/" + fileName;
+        File file = new File(filePath);
+        if (file.isFile()) {
+            try {
+                dos.writeUTF(SEND_FILE_COMMAND);
+                dos.writeUTF(fileName);
+                dos.writeLong(file.length());
+                try (FileInputStream fis = new FileInputStream(file)) {
+                    byte[] bytes = fis.readAllBytes();
+                    dos.write(bytes);
+                } catch (IOException e) {
+                    throw new RuntimeException(e);
                 }
+            } catch (IOException e) {
+                System.err.println("e= " + e.getMessage());
+
+
             }
         } catch (Exception e) {
             System.err.println("Server off");
             e.printStackTrace();
         }
     }
+
+    public void getFromServer(ActionEvent actionEvent) {
+        String fileName = serverView.getSelectionModel().getSelectedItem();
+        String filePath = currentDirectory + "/" + fileName;
+        File file = new File(filePath);
+        try {
+            dos.writeUTF(GET_FILE_COMMAND);
+            dos.writeUTF(fileName);
+            long size = dis.readLong();
+            try (FileOutputStream fos = new FileOutputStream(file)) {
+                for (int i = 0; i < (size + BATCH_SIZE - 1) / BATCH_SIZE; i++) {
+                    int read = dis.read(batch);
+                    fos.write(batch, 0, read);
+                }
+            } catch (IOException ignored) {
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        fillView(clientView, getFiles(currentDirectory));
+
+    }
+
+    private List<String> getFilesFromServer(String currentDirectoryServer) {
+        List<String> files = new ArrayList<>();
+        try {
+            dos.writeUTF(GET_FILELIST_COMMAND);
+            dos.writeUTF(currentDirectoryServer);
+            int countFiles = dis.readInt();
+            for (int i = 0; i < countFiles; i++) {
+                files.add(dis.readUTF());
+            }
+            //       this.currentDirectoryServer = dis.readUTF();
+            return files;
+
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+
+        return List.of();
+    }
+
 
     private void initNetwork() {
         try {
@@ -83,6 +141,7 @@ public class CloudMainController implements Initializable {
         needReadMessages = true;
         factory = new DaemonThreadFactory();
         initNetwork();
+        batch = new byte[BATCH_SIZE];
         setCurrentDirectory(System.getProperty("user.home"));
         fillView(clientView, getFiles(currentDirectory));
         clientView.setOnMouseClicked(event -> onMouseClickOnView(event, clientView, currentDirectory, true));
@@ -94,6 +153,7 @@ public class CloudMainController implements Initializable {
             String selected = view.getSelectionModel().getSelectedItem();
             String delimiter = (directory.equals(""))?"":"/";
             setDirectory(directory +  delimiter + selected, isClient);
+
         }
     }
 
@@ -103,6 +163,7 @@ public class CloudMainController implements Initializable {
         } else {
             setCurrentDirectoryOnServer(directory);
         }
+
     }
 
     private void setCurrentDirectory(String directory) {
@@ -111,6 +172,7 @@ public class CloudMainController implements Initializable {
             currentDirectory = directory;
             fillView(clientView, getFiles(currentDirectory));
         }
+
     }
 
     private void setCurrentDirectoryOnServer(String directory) {
@@ -120,7 +182,15 @@ public class CloudMainController implements Initializable {
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
+
     }
+
+    private void setCurrentDirectoryOnServer(String directory) {
+//        currentDirectoryServer = directory;
+        fillView(serverView, getFilesFromServer(directory));
+
+    }
+
 
     private void fillView(ListView<String> view, List<String> data) {
         view.getItems().clear();
@@ -143,3 +213,4 @@ public class CloudMainController implements Initializable {
     }
 
 }
+
